  headers that should be ignored in the direct mode.

- Added new `prefix_command_cpp` (`CCACHE_PREFIX_CPP`) configuration option,
  which specifies one or several prefixes to add to the command line ccache
  uses when invoking the preprocessor.

- The concatenated form of some long compiler options is now recognized, for
  example when using `-isystemPATH` instead of `-isystem PATH`.


Bug fixes
~~~~~~~~~

- Fixed clang test suite when running on Linux.


Unreleased ccache 3.2.5
-----------------------

New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Only pass clang-specific `-stdlib=` to the preprocessor.


Bug fixes
~~~~~~~~~

- Include m4 files used by configure.ac in the source dist archives.

- Corrected "Performance" section in the manual regarding `__DATE_`, `__TIME__`
  and `__FILE__` macros.

- Fixed build on Solaris 10+ and AIX 7.

- Fixed failure to create directories on QNX.

- Don't (try to) update manifest file in ``read-only and ``read-only direct''
  modes.

- Fixed a bug in caching of `stat` system calls in ``file_stat_matches
  sloppiness mode''.


ccache 3.2.4
------------
Release date: 2015-10-08


Bug fixes
~~~~~~~~~

- Fixed build error related to zlib on systems with older make versions
  (regression in ccache 3.2.3).

- Made conversion-to-bool explicit to avoid build warnings (and potential
  runtime errors) on legacy systems.

- Improved signal handling: Kill compiler on SIGTERM; wait for compiler to exit
  before exiting; die appropriately.

- Minor fixes related to Windows support.

- The correct compression level is now used if compression is requested.

- Fixed a bug where cache cleanup could be run too early for caches larger than
  64 GiB on 32-bit systems.


ccache 3.2.3
------------
Release date: 2015-08-16


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for compiler option `-gsplit-dwarf`.


Bug fixes
~~~~~~~~~

- Support external zlib in nonstandard directory.
